force-app/main/default/objects/ASF_Case_SLA_History__c/ASF_Case_SLA_History__c.object-meta.xml
<CustomObject>
    <label>Case SLA History</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case SLA Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>