force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Actioned_By__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By__c</fullName>
    <label>Actioned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>