force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Actual_Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_Taken__c</fullName>
    <label>Actual Time Taken</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>