force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_SLA_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>