force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Agent_CC__c.field-meta.xml
<CustomField>
    <fullName>Agent_CC__c</fullName>
    <label>Agent CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>