force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Agent_LOB__c.field-meta.xml
<CustomField>
    <fullName>Agent_LOB__c</fullName>
    <label>Agent LOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>