force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Agent_LOC__c.field-meta.xml
<CustomField>
    <fullName>Agent_LOC__c</fullName>
    <label>Agent LOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>