force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Agreed_SLA_in_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Agreed_SLA_in_Hrs__c</fullName>
    <label>Agreed SLA (in Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>