force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <formula>Agent__r.Assigned_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Team</label>
    <type>Text</type>
</CustomField>