force-app/main/default/objects/ASF_Case_SLA_History__c/fields/AssignedBy__c.field-meta.xml
<CustomField>
    <fullName>AssignedBy__c</fullName>
    <formula>If(Actioned_By__c&lt;&gt;Current_Owner__c &amp;&amp; CASESAFEID(Case__r.OwnerId)=Current_Owner_Id__c,Actioned_By__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned By</label>
    <type>Text</type>
</CustomField>