force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Breached_User__c.field-meta.xml
<CustomField>
    <fullName>Breached_User__c</fullName>
    <label>Breached User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>