force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Breached_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Breached_User_Id__c</fullName>
    <label>Breached User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>