force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Breached_User_Level3__c.field-meta.xml
<CustomField>
    <fullName>Breached_User_Level3__c</fullName>
    <label>Breached User Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>