force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Breached_User_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Breached_User_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breached User Level 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_SLA_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>