force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Breached_User_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Breached_User_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breached User Level 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_SLA_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>