force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Bulk_Movement_User__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Movement_User__c</fullName>
    <label>Bulk Movement Initiator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>