force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Bulk_Movement_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Movement_User_Id__c</fullName>
    <label>Bulk Movement Initiator Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>