force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Bulk_Operation__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Operation__c</fullName>
    <label>Bulk Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>