force-app/main/default/objects/ASF_Case_SLA_History__c/fields/BusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BusinessHoursId</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>SR_SLA_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>