force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Case_Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Team__c</fullName>
    <description>This field is to store the Assigned Team during that Stage.</description>
    <label>Case Assigned Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>