force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <label>Current Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>