force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Current_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Id__c</fullName>
    <label>Current Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>