force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Del_Business_Hour_Id__c.field-meta.xml
<CustomField>
    <fullName>Del_Business_Hour_Id__c</fullName>
    <label>Del Business Hour Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>