force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Delete_Breached_User__c.field-meta.xml
<CustomField>
    <fullName>Delete_Breached_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delete Breached User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SR_SLA_Histories4</relationshipName>
    <type>Lookup</type>
</CustomField>