force-app/main/default/objects/ASF_Case_SLA_History__c/fields/FromStage__c.field-meta.xml
<CustomField>
    <fullName>FromStage__c</fullName>
    <label>From Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>