force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Is_Bulk_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bulk Updated</label>
    <type>Checkbox</type>
</CustomField>