force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Is_Move_Back__c.field-meta.xml
<CustomField>
    <fullName>Is_Move_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Move Back</label>
    <type>Checkbox</type>
</CustomField>