force-app/main/default/objects/ASF_Case_SLA_History__c/fields/is_Running_Record__c.field-meta.xml
<CustomField>
    <fullName>is_Running_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Running Record</label>
    <type>Checkbox</type>
</CustomField>