force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Last_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Change_Date__c</fullName>
    <label>Last Owner Change Date</label>
    <type>DateTime</type>
</CustomField>