force-app/main/default/objects/ASF_Case_SLA_History__c/fields/oldExternalId__c.field-meta.xml
<CustomField>
    <fullName>oldExternalId__c</fullName>
    <label>oldExternalId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>