force-app/main/default/objects/ASF_Case_SLA_History__c/fields/OldTypeSubType__c.field-meta.xml
<CustomField>
    <fullName>OldTypeSubType__c</fullName>
    <label>OldTypeSubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>