force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <label>Overdue Time (in Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>