force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Overdue_Time_in_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Time_in_Hrs__c</fullName>
    <label>Overdue Time (in Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>