force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Rejection_Id__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Id__c</fullName>
    <label>Rejection Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>