force-app/main/default/objects/ASF_Case_SLA_History__c/fields/SLA_2_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>SLA_2_Email_Sent__c</fullName>
    <label>SLA 2 Email Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>