force-app/main/default/objects/ASF_Case_SLA_History__c/fields/SLA_3_Email_sent__c.field-meta.xml
<CustomField>
    <fullName>SLA_3_Email_sent__c</fullName>
    <label>SLA 3 Email sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>