force-app/main/default/objects/ASF_Case_SLA_History__c/fields/SLA_CC__c.field-meta.xml
<CustomField>
    <fullName>SLA_CC__c</fullName>
    <label>SLA CC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>