force-app/main/default/objects/ASF_Case_SLA_History__c/fields/SLA_LOB__c.field-meta.xml
<CustomField>
    <fullName>SLA_LOB__c</fullName>
    <label>SLA LOB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>