force-app/main/default/objects/ASF_Case_SLA_History__c/fields/SLA_LOC__c.field-meta.xml
<CustomField>
    <fullName>SLA_LOC__c</fullName>
    <label>SLA LOC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>