force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Stage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Start_Date__c</fullName>
    <label>Stage Start Date</label>
    <type>DateTime</type>
</CustomField>