force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <label>Time Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>