force-app/main/default/objects/ASF_Case_SLA_History__c/fields/Time_Taken_In_Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_In_Business_Hour__c</fullName>
    <label>Time Taken In Business Hour</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>